--- a/quasar.extensions.json
+++ b/quasar.extensions.json
@@ -2,5 +2,8 @@
   "@quasar/qmarkdown": {
     "import_md": true,
     "import_vmd": true
+  },
+  "@quasar/apollo": {
+    "graphql_uri": "http://localhost:1337/graphql"
   }
 }
