--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cmsexample",
+  "name": "quasarcms",
   "version": "0.0.1",
   "description": "A Quasar Framework app",
   "productName": "Quasar App",
